add text layer fixes #30

--- a/stylus/main.styl
+++ b/stylus/main.styl
@@ -9,3 +9,11 @@ h1
 footer
     text-align: center
     color: #aaa
+
+#main
+    position: relative
+
+canvas
+    position: absolute
+    top: 0
+    left: 0
