--- a/stylus/main.styl
+++ b/stylus/main.styl
@@ -4,7 +4,10 @@
     padding: 10px
 
 h1
-    text-align: center
+    margin: 5px 0
+
+header li
+    margin-right: 15px
 
 footer
     text-align: center
@@ -17,3 +20,6 @@ canvas
     position: absolute
     top: 0
     left: 0
+
+#logo
+    height: 50px
